# mcp-api-wrapper

./: .gitignore  README.md  pyproject.toml
examples/: full_flow.py
src/mcp_api_wrapper/: __init__.py  config.py  schemas.py
src/mcp_api_wrapper/api/: example_api.py  registry.py
src/mcp_api_wrapper/auth/: token_service.py
src/mcp_api_wrapper/queue/: message_queue.py
src/mcp_api_wrapper/rag/: __init__.py  chunking.py  doc_index.py  embeddings.py  types.py  vector_store.py
src/mcp_api_wrapper/server/: main.py
tests/: conftest.py  test_chunking.py  test_doc_index.py  test_embeddings.py  test_integration.py  test_mcp_server.py  test_message_queue.py  test_registry.py  test_search_tool.py  test_token_service.py  test_vector_store.py
